[gd_scene load_steps=23 format=3 uid="uid://dha1gen4k81gu"]

[ext_resource type="Script" path="res://Scripts/Levels/Main Levels/level_1.gd" id="1_vm71l"]
[ext_resource type="Script" path="res://Scripts/Enemy/Waves System/enemy_pool.gd" id="2_5vlpc"]
[ext_resource type="Texture2D" uid="uid://b064hrwm2665m" path="res://Assets/Sprites/kenney_space-shooter-redux/Backgrounds/black.png" id="2_ueotx"]
[ext_resource type="PackedScene" uid="uid://ctl21565djtmg" path="res://Scenes/Enemy/Bosses/Tsubasahr(B2).tscn" id="2_wr2dk"]
[ext_resource type="Script" path="res://Scripts/Visuals/background.gd" id="3_gy1c7"]
[ext_resource type="PackedScene" uid="uid://b03fjsr5evycm" path="res://Scenes/Enemy/Enemy A/BlueEnemyA.tscn" id="3_st7iu"]
[ext_resource type="Texture2D" uid="uid://c4hth0x6tf4iy" path="res://Assets/Sprites/Foozle_2DS0015_Void_EnvironmentPack/Backgrounds/PNGs/Condesed/Starry background  - Layer 01 - Void.png" id="3_usxtf"]
[ext_resource type="PackedScene" uid="uid://dno1gnvkkkf1c" path="res://Scenes/Enemy/Enemy A/RedEnemyA.tscn" id="4_kf1ay"]
[ext_resource type="Texture2D" uid="uid://y2iw334ycefu" path="res://Assets/Sprites/Foozle_2DS0015_Void_EnvironmentPack/Backgrounds/PNGs/Condesed/Starry background  - Layer 02 - Stars.png" id="4_qafcv"]
[ext_resource type="PackedScene" uid="uid://b13v4v2sx72x7" path="res://Scenes/LevelHUD.tscn" id="5_6kg7p"]
[ext_resource type="PackedScene" uid="uid://c5rstnfoa1yfx" path="res://Scenes/Enemy/Enemy B/BlueEnemyB.tscn" id="5_p4v5o"]
[ext_resource type="Texture2D" uid="uid://bmom80b35jxmm" path="res://Assets/Sprites/GameOver.jpg" id="6_m0k6b"]
[ext_resource type="PackedScene" uid="uid://rr8mb8xx4lu6" path="res://Scenes/Enemy/Enemy B/RedEnemyB.tscn" id="6_ttn3u"]
[ext_resource type="Script" path="res://Scripts/Visuals/camera.gd" id="7_3b6ff"]
[ext_resource type="Script" path="res://Scripts/Enemy/Waves System/waveData.gd" id="7_bm6e7"]
[ext_resource type="Resource" uid="uid://cj3o0du5yj3tm" path="res://Scripts/Enemy/Waves System/Level1/L1W1.tres" id="8_vcmuy"]
[ext_resource type="Resource" uid="uid://i0wuas2jfv5u" path="res://Scripts/Enemy/Waves System/Level1/L1W2.tres" id="9_d7m1r"]
[ext_resource type="PackedScene" uid="uid://82awlca2q8xw" path="res://Scenes/PauseMenu.tscn" id="11_qnghh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_taqpl"]

[sub_resource type="Animation" id="Animation_4jdtd"]
resource_name = "GameOver"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GameOverSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xaqa0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GameOverSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bx5ux"]
_data = {
"GameOver": SubResource("Animation_4jdtd"),
"RESET": SubResource("Animation_xaqa0")
}

[node name="Level1" type="Node"]
script = ExtResource("1_vm71l")
level_boss = ExtResource("2_wr2dk")
spawn_position_x = 541
spawn_position_y = -434

[node name="EnemyPool" type="Node" parent="."]
script = ExtResource("2_5vlpc")
enemy_scenes = Array[PackedScene]([ExtResource("3_st7iu"), ExtResource("4_kf1ay"), ExtResource("5_p4v5o"), ExtResource("6_ttn3u")])
enemy_names = Array[String](["BlueA", "RedA", "BlueB", "RedB", "BlueC", "RedC", "BlueD", "RedD"])
waves = Array[ExtResource("7_bm6e7")]([ExtResource("8_vcmuy"), ExtResource("9_d7m1r")])

[node name="BG" type="Node2D" parent="."]
script = ExtResource("3_gy1c7")

[node name="Sprite2D" type="Sprite2D" parent="BG"]
texture_filter = 1
position = Vector2(1087, 1391)
rotation = 3.14159
scale = Vector2(4.28, 5.48)
texture = ExtResource("2_ueotx")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="BG"]
modulate = Color(1, 1, 1, 0.368627)
texture_filter = 1
position = Vector2(-15, 1425)
rotation = 4.71239
scale = Vector2(0.925524, 3.09595)
texture = ExtResource("3_usxtf")
centered = false
flip_v = true

[node name="Sprite2D3" type="Sprite2D" parent="BG"]
modulate = Color(1, 1, 1, 0.368627)
texture_filter = 1
position = Vector2(-8, 1403)
rotation = 4.71239
scale = Vector2(2.04552, 3.09595)
texture = ExtResource("4_qafcv")
centered = false
flip_v = true

[node name="Characters" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(540, 690)
script = ExtResource("7_3b6ff")

[node name="ShakeTime" type="Timer" parent="Camera"]
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="PlayerRespawn" type="Timer" parent="."]
wait_time = 3.0

[node name="Comentarios" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Comentario1" type="Label" parent="Comentarios"]
layout_mode = 0
offset_left = 1228.0
offset_top = 432.0
offset_right = 1455.0
offset_bottom = 481.0
theme_override_font_sizes/font_size = 81
text = "FLECHAS o WASD = MOVERSE
ESPACIO o N = DISPARAR
SHIFT o M = CAMBIAR COLOR
TAB o B = SUPERDISPARO"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelHUD" parent="CanvasLayer" instance=ExtResource("5_6kg7p")]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("11_qnghh")]

[node name="GameOverSprite" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_taqpl")
texture = ExtResource("6_m0k6b")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bx5ux")
}

[connection signal="timeout" from="Camera/ShakeTime" to="Camera" method="_on_shake_time_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="PlayerRespawn" to="." method="_on_player_respawn_timeout"]
